fixed horizontal scroll, letters design in article and links

--- a/src/styles/actual.scss
+++ b/src/styles/actual.scss
@@ -102,5 +102,9 @@
     line-height: 150%;
 
     color: $grey;
+
+    @media (max-width: 480px) {
+      width: 300px;
+    }
   }
 }
