--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -58,6 +58,12 @@
     font-weight: 600;
   }
 
+  &__contacts {
+    & > a {
+      color: $dark;
+    }
+  }
+
   &__line {
     width: 1px;
     height: 260px;
@@ -114,6 +120,7 @@
 
   &__link {
     padding: 5px;
+    color: $dark;
   }
 
   &__copyright {
