--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -15,11 +15,20 @@
     @media (max-width: 1180px) {
       display: flex;
     }
+
+    @media (max-width: 480px) {
+      height: 454px;
+    }
   }
 
   &__firstImg {
     grid-column-start: 1;
     grid-column-end: 2;
+
+    @media (max-width: 480px) {
+      width: 280px;
+      height: 454px;
+    }
   }
 
   &__secondImg {
