--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -153,7 +153,7 @@
   &__article-span {
 
     @media (min-width: 766px) {
-      -webkit-text-fill-color: white;
+      -webkit-text-fill-color: transparent;
       -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: black;
     }
