--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -47,14 +47,13 @@
     @include mainText;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 72px;
     color: $dark;
 
     text-align: center;
 
     @media (max-width: 928px) {
-      font-size: 14px;
       line-height: 48px;
     }
   }
